--- a/NOTES/.NOTES.markdown
+++ b/NOTES/.NOTES.markdown
@@ -6,3 +6,4 @@
 - `a * b * c = GCD(a * b * c) * LCM(a * b * c)`
 - if `GCD(a, b) == 1` -> a and b are co-prime
 - for any general series write it in terms of prev element `An = An-1 + (somthign)` 
+- two or more sets with nothing in common are called disjoint sets
