--- a/NOTES/.SNIPPET.markdown
+++ b/NOTES/.SNIPPET.markdown
@@ -4,6 +4,7 @@
 >  [`Binary-Exponentiation`](#Binary-Exponentiation)
 >  [`Prime-Factors`](#Prime-Factors)
 >  [`Prime-Number-Seive`](#Prime-Number-Seive) 
+>  [`binomial coefficient nCr`](#Binomial-Coefficient) 
 >  
 
 - ##### `Max-Sum-Subarray`
@@ -62,4 +63,23 @@
 
         return seive;
     }
+```
+- ##### `Binomial-Coefficient`
+```cpp
+    // C(n, r) => nCr
+    // C(n, r) = C(n - 1, r - 1) + C(n - 1, r)
+    int dp[n + 1][r + 1];
+    memset(dp, 0, sizeof(dp));
+    
+    for (int i = 0; i <= n; i++) {
+        for (int j = 0; j <= min(i, r); j++) {
+            if (j == 0 || j == i) {
+                dp[i][j] = 1;
+            }
+            else {
+                dp[i][j] = dp[i - 1][j - 1] + dp[i - 1][j];
+            }
+        }
+    }
+    // dp[n][r] => represent the answer
 ```
